# databench-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  SUBMISSION.md  metrics_compare.py  prov_drivers_model.py  prov_drivers_triangulate.py  prov_leakage_estimate.py  prov_ownership_explore.py  prov_ownership_payment_check.py  provider_drivers_dashboard.py  provider_drivers_findings.md  pyproject.toml  quality_build.py  temporal_check.py  uhc_analysis.py
docs/: databench-analyst-SKILL.md
docs/slides/: UHC_Affordability_Deck.pptx  UHC_Affordability_Deck_readahead.pptx
docs/superpowers/plans/: 2026-06-11-phase4-analysis.md  2026-06-12-chart-expansion.md  2026-06-12-dashboard.md  2026-06-12-recipes.md  (+2 more)
src/databench_mcp/: __init__.py  db.py  server.py  workspace.py
tests/: conftest.py  test_core_analysis.py  test_core_analysis_peer.py  test_core_compare_findings.py  test_core_corrections.py  test_core_dashboard.py  test_core_data_quality.py  test_core_eda.py  test_core_eda_derive.py  test_core_eda_pipeline.py  test_core_findings.py  test_core_hypothesis.py  test_core_ingest.py  test_core_modeling.py  test_core_modeling_ebm.py  test_core_modeling_network.py  test_core_profile.py  test_core_project.py  test_core_recipes.py  test_core_viz.py  test_core_viz_network.py  test_db.py  test_integration_corrections.py  test_server.py  test_workspace.py
tests/tools/: test_analysis.py  test_dashboard_integration.py  test_eda.py  test_hypothesis.py  test_ingest.py  test_modeling.py  test_network_integration.py  test_profile.py  test_project.py  test_recipes_integration.py  test_viz.py
(+48 files in other folders)
