[project]
name = "databench-mcp"
version = "0.1.0"
description = "AI-augmented data-analysis MCP platform — guard-railed tools for ingestion, profiling, EDA, hypothesis tracking, analysis, viz, and reproducible recipe pipelines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Camilla Champion", email = "camilla.champion.91@gmail.com" }]
dependencies = [
    "fastmcp>=3.2,<4",
    "duckdb>=1.1",
    "polars>=1.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "plotly>=5.22",
    "shap>=0.45",
    "python-igraph>=0.11",
]

[project.scripts]
databench-mcp = "databench_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databench_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
